# molecular_fingerprint_comparisons

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
notebooks/: RascalMCES_computations.ipynb  fingerprint_analysis_01_duplications.ipynb  fingerprint_analysis_02_similarities.ipynb  fingerprint_analysis_02_similarities_distributions_one_vs_one.ipynb  fingerprint_analysis_04_go_sparse.ipynb  fingerprint_analysis_05_log_scaling_and_idf.ipynb  fingerprint_analysis_MCES_correlation.ipynb  fingerprint_analysis_MCES_correlation_experiment.ipynb  fingerprint_analysis_bit_counts.ipynb  fingerprint_analysis_riniker_benchmark.ipynb  fingerprint_analysis_similarities_ranking_consistency.ipynb  metrics.py  ranking_the_rankings.ipynb  utils.py  visualizations.py
src/: approx_nn.py  fingerprint_computation.py  fingerprints_cli.py  mbp.py
tests/: test_metrics.py
