[project]
name = "molecular-fingerprints-comparisons"
version = "0.1.0"
description = "Code used to analyse and compare different molecular fingerprints."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "biosynfoni>=1.0.0",
    "map4>=1.1.3",
    "matplotlib>=3.10.1",
    "numba>=0.61.2",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "rdkit>=2024.9.6",
    "scipy>=1.15.2",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
]
